# mewe

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  log.txt  log2.txt  log3.txt  tmp.txt
src/: lib.rs  main.rs  merry-short.json  merry.md  scrape.rs  sdsense.html  vg.html
