[package]
name = "mewe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
scraper = "0.19.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
