[package]
name = "mewe"
version = "0.1.0"
edition = "2021"
description = "CLI dictionary app. Fetches only one definition from Merriam Webster."
license = "MIT"
categories = ["command-line-utilities", "dictionary"]
keywords = ["merriam", "webster", "dictionary", "mewe", "definition"]
readme = "README.md"
homepage = "https://github.com/txtyash/mewe"
repository = "https://github.com/txtyash/mewe"
documentation = "https://docs.rs/mewe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
scraper = "0.19.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
